curatescape/css/screen.css
/* ... */
/*! TRANSITIONS */
body,#wrap,#search-wrap,nav,#hero,header.main,#showmap a,#swipenav #position li.active{transition:all .2s linear;-o-transition:all .2s linear;-moz-transition:all .2s linear;-webkit-transition:all .2s linear}#access-info{background-color:transparent;transition:background-color 1.5s ease;-o-transition:background-color 1.5s ease;-moz-transition:background-color 1.5s ease;-webkit-transition:background-color 1.5s ease;}#access-info.target{background-color:#ffff99;}.map-actions a,.map-actions,{transition:all .25s linear;-o-transition:all .25s linear;-moz-transition:all .25s linear;-webkit-transition:all .25s linear}#items .tour-nav.look-at-me,#items .tour-nav{-webkit-transition:all 0.75s ease;-moz-transition:all 0.75s ease;-o-transition:all 0.75s ease;transition:all 0.75s ease}header.main .menu{
-webkit-transition:margin 0.5s ease;-moz-transition:margin 0.5s ease;-o-transition:margin 0.5s ease;transition:margin 0.5s ease	
}

/*! Links */
a:focus{outline:none;}a{border-bottom:1px dashed #e2e2e2;padding-bottom:1px;text-decoration:none}
a:hover,a:active{border-bottom:1px dashed #eaeaea}
a,a:hover,a:active{color:#999;}

/*! Typography */
h1,h2,h3,h4,h5{}#content{-webkit-hyphens:auto;-moz-hyphens:auto;-ms-hyphens:auto;-o-hyphens:auto;hyphens:auto}p,section#text,section.meta,.about-snippet,.item-description,
.fancybox-inner{}
#cite-this,.item-related-links a,#story-header,#tour-header,.file-appears-in-item,#subjects li a,#tags li a{-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;-o-hyphens:none;hyphens:none}blockquote{margin:2em 16px 0;padding:1.5em 0 1em;quotes:"\201C""\201D""\2018""\2019";border-top:1px dashed #dadada;border-bottom: 1px dashed #dadada;}blockquote:before{color:#ccc;content:open-quote;font-size:4em;line-height:0.1em;margin-right:0.15em;vertical-align:-0.4em}
blockquote p:first-of-type {display:inline}
q{quotes:"\201C""\201D""\2018""\2019"}q:before{content:open-quote}q:after{content:close-quote}h1,h2,h3,h4,h5{-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;-o-hyphens:none;hyphens:none;}h1 a,h2 a,h3 a,h4 a,h5 a,nav a,a.item-map-link{border-bottom:0 none transparent}
h1,h2,h3,h4,h5,nav,#search-wrap input,#map_canvas a,#slider li div span,thead,#map-faq-inner p a{font-variant:small-caps}
.ie #featured-story h3,.ie #home-tours h3{}
body{line-height:1.75em}
#story-header .story-meta,#tour-header .tour-meta{color:#777;font-weight:normal;font-variant:small-caps;font-size:.95em;display:inline-block;line-height:1.6em}#story-header .item-title,#tour-header .tour-title{margin-bottom:.25em}#story-header .item-subtitle,#tour-header .tour-subtitle{color:#555;font-size:1.2em;font-weight:normal;margin-top:0;margin-bottom:.25em;}.item-subtitle{margin-bottom:0}#tours.browse #content h3,#tours.show #tour-items h3.locations{margin-bottom:0}#tours.show #tour-items h3.locations{margin:3em 0 2em;width:100%;border-bottom:1px solid #CCC;color:#777;font-weight:400}#tours.show #tour-items article{margin:1% auto;display: inline-block;}#tours.show #tour-items .item-description{color:#942828;line-height: 1.5em;}#tours.show #primary,.page #primary{margin-bottom:3em}#tours.show span.number{font-size:1em;line-height:1.5em;background:#942828;color:#fff;width:1.5em;height:1.5em;border-radius:15%;display:inline-block;text-align:center;text-shadow:1px 1px 0 #000;margin-right:.5em;padding-top:1px;}#tours.show #slider span.number{}#tour-header{padding:1em 0 1.5em;}#item-lede{width:90%;font-style:italic;color:#555;display:block;margin:1em auto 1.5em;font-size:1.15em;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;-o-hyphens:none;hyphens:none}.truncate{width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1em}.show.dropcap .item-description p:first-child:first-letter,.show.dropcap #tour-description p:first-child:first-letter{float:left;font-size:4em;line-height:.75em;padding-top:0.075em;padding-right:.115em;padding-left:0}
span.post-date{font-style: italic;font-size: .75em; color:#777;line-height: 1.1em;display: block;line-height: 1.6em;}
/*#tour-postscript{font-size:.9em;font-style: italic;}*/

/*! HEADER */
header.main {
	width: 100%;
	max-width: 50em;
	min-height: 6.5em;
	display: block;
	font-variant: small-caps;
	z-index: 1
}

header.main #logo-img {
	max-height: 6.5em;
	max-width: 11.8em;
	padding: .75em .25em .25em;
	display: inline-block
}

header.main #header-search {
	display: block;
	margin: 1em 0;
	padding: 0
}

header.main #header-search input {
	font-variant: small-caps
}

header.main .menu {
	float: right;
	display: block
}

#mobile-menu-button {
	display: none;
	float: right;
	padding: 1em 0;
	font-size: 2.5em;
	margin: 0;
}

#mobile-menu-button a {
	border-bottom: 0 none transparent;
	color: #942828;
	cursor: pointer;
	padding: .75em
}

header.main .random-story-link.show {
	color: #FAFAFA;
	margin: 0 auto;
	display: none;
	background: #942828;
	padding: 1em 0
}

/*
header.main ul.navigation {
	padding-left: 0;
	text-align: right
}
*/

a.home-link {
	border: 0 none transparent;
}

@media only screen and (max-width:50em) {
	header.main {
		background: #fff;
		min-height: 6.75em;
		padding: 0 !important;
		position: relative;
		box-shadow: 0 0 .5em #942828
	}
	header.main .menu {
		background: #eaeaea;
		padding-top: .5em;
		width: 100%;
		margin: 0 auto;
		clear: both;
		text-align: center;
		box-shadow: 0em .25em .25em #942828;
		display: none;
	}
	header.main .menu.active {
		display: block;
	}
	header.main .random-story-link.show {
		display: block
	}
	#mobile-menu-button {
		display: block;
	}
	header.main #logo-img {
		max-height: 6em;
		padding: 0.5em 1em 0 !important
	}
	header.main a.home-link {
		display: inline-block;
	}
	.menu.active nav ul ul {
	    display: inline-block;
	    position:relative;
    }
    .menu.active ul.navigation ul li {
        display:initial;
    }
}

header.main ul.navigation {
	padding-left: 0;
	/*text-align: center;*/
}

header.main ul.navigation li {
	display: inline-block;
}
/* ... */

